--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -16,7 +16,7 @@
 <style>
 	/* 1. 테이블 전체 글자 크기 조절 */
    .table { font-size: 1.5rem; } 
-   .table thead th { font-size: 1.1rem; padding: 15px; }
+   .table thead th { font-size: 2rem; padding: 15px; }
 
    /* 2. 승인/삭제 버튼 크기 및 텍스트 조절 */
    .btn-custom-size {
@@ -115,20 +115,14 @@
             <!-- Alerts Section -->
 
                   <div class="card shadow-sm mb-4">
-                     <div
-                        class="card-header bg-white d-flex justify-content-between align-items-center py-3">
-                        <h5 class="mb-0 text-secondary">
-                           최근 이벤트
-                           <span id="todayBadge" class="badge bg-primary ms-2"></span>
-                        </h5>
-                     </div>
+                     
                      
                      <div class="card-body p-0">
                         <!-- 신청 권한 박스 -->
                         <div class="row">
 						   <div class="col-12"> 
 						     <div class="card shadow-sm mb-4">
-    <div class="card-header bg-white py-3 border-bottom-0">
+    <div class="card-header bg-white py-3">
         <h5 class="mb-0 text-secondary">
             <i class="bi bi-person-check me-2"></i>승인 대기 명단
             <span class="badge bg-warning text-dark ms-2" th:text="${#lists.size(pendingMembers)}">0</span>
