--- a/src/main/resources/templates/monitoring.html
+++ b/src/main/resources/templates/monitoring.html
@@ -372,16 +372,14 @@
                               <i class="bi bi-camera-video me-2"></i>실시간 모니터링
                            </a>
                         </li>
-                        <li class="nav-item">
-                           <a class="nav-link"
-                              th:classappend="${requestURI.contains('/alerts')} ? 'active'">
-                              <i class="bi bi-bell me-2"></i>알림 센터
-                           </a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{alerts}"
+                     th:classappend="${requestURI.contains('/alerts')} ? 'active'">
+                        <i class="bi bi-bell me-2"></i>알림 센터
+                  </a></li>
                         <li class="nav-item"><a class="nav-link" th:href="@{/manager}"
-		                     th:classappend="${requestURI.contains('/manager')} ? 'active'">
-		                        <i class="bi bi-bell me-2"></i>관리자
-		                  </a></li>
+                     th:classappend="${requestURI.contains('/manager')} ? 'active'">
+                        <i class="bi bi-people-fill me-2"></i>관리자
+                  </a></li>
                      </ul>
                      <div class="mt-5 px-3">
                         <span class="small text-muted" style="color: silver !important;">carepose 1.0.0</span>
