--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -55,17 +55,13 @@
                   <i class="bi bi-camera-video me-2"></i>실시간 모니터링
                 </a>
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  th:classappend="${requestURI.contains('/alerts')} ? 'active' : ''"
-                >
-                  <i class="bi bi-bell me-2"></i>알림 센터
-                </a>
-              </li>
+              <li class="nav-item"><a class="nav-link" th:href="@{alerts}"
+                     th:classappend="${requestURI.contains('/alerts')} ? 'active'">
+                        <i class="bi bi-bell me-2"></i>알림 센터
+                  </a></li>
               <li class="nav-item"><a class="nav-link" th:href="@{/manager}"
                      th:classappend="${requestURI.contains('/manager')} ? 'active'">
-                        <i class="bi bi-bell me-2"></i>관리자
+                        <i class="bi bi-people-fill me-2"></i>관리자
                   </a></li>
             </ul>
 
