--- a/src/main/resources/templates/roomSelect.html
+++ b/src/main/resources/templates/roomSelect.html
@@ -77,17 +77,13 @@
                   <i class="bi bi-camera-video me-2"></i>실시간 모니터링
                 </a>
               </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  th:classappend="${requestURI.contains('/alerts')} ? 'active'"
-                >
-                  <i class="bi bi-bell me-2"></i>알림 센터
-                </a>
-              </li>
+              <li class="nav-item"><a class="nav-link" th:href="@{alerts}"
+                     th:classappend="${requestURI.contains('/alerts')} ? 'active'">
+                        <i class="bi bi-bell me-2"></i>알림 센터
+                  </a></li>
               <li class="nav-item"><a class="nav-link" th:href="@{/manager}"
                      th:classappend="${requestURI.contains('/manager')} ? 'active'">
-                        <i class="bi bi-bell me-2"></i>관리자
+                        <i class="bi bi-people-fill me-2"></i>관리자
                   </a></li>
             </ul>
 
@@ -100,7 +96,7 @@
         </nav>
 
         <!-- 메인 -->
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-6">
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
           <!-- 헤더 -->
           <div class="page-header mb-4.5">
             <div>
