--- a/src/main/resources/templates/alerts.html
+++ b/src/main/resources/templates/alerts.html
@@ -23,12 +23,13 @@
       <div class="row">
          <!-- Sidebar -->
          <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse p-0">
-            <div class="position-sticky pt-4 px-3">
+            <div class="position-sticky">
                <div class="sidebar-logo">
+               		<img src="/css/logo.png" alt="SMHRD 요양병원 로고">
                   <div class="sidebar-title">SMHRD 요양병원</div>
                   <div class="sidebar-subtitle">안전 관제시스템</div>
                </div>
-               <ul class="nav flex-column">
+               <ul class="nav flex-column px-3">
                   <li class="nav-item"><a class="nav-link"
                      th:href="@{/dashboard}"
                      th:classappend="${requestURI.contains('/dashboard')} ? 'active'">
@@ -49,7 +50,7 @@
                   </a></li>
                   <li class="nav-item"><a class="nav-link" th:href="@{/manager}"
                      th:classappend="${requestURI.contains('/manager')} ? 'active'">
-                        <i class="bi bi-bell me-2"></i>관리자
+                        <i class="bi bi-people-fill me-2"></i>관리자
                   </a></li>
                </ul>
                <div class="mt-5 px-3">
