--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -21,13 +21,13 @@
       <div class="row">
         <!-- Sidebar -->
         <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse p-0">
-          <div class="position-sticky pt-4 px-3">
-            <div class="sidebar-logo">
-              <div class="sidebar-title">SMHRD 요양병원</div>
-              <div class="sidebar-subtitle">안전 관제시스템</div>
-            </div>
-
-            <ul class="nav flex-column">
+          <div class="position-sticky">
+               <div class="sidebar-logo">
+               		<img src="/css/logo.png" alt="SMHRD 요양병원 로고">
+                  <div class="sidebar-title">SMHRD 요양병원</div>
+                  <div class="sidebar-subtitle">안전 관제시스템</div>
+               </div>
+               <ul class="nav flex-column px-3">
               <li class="nav-item">
                 <a
                   class="nav-link"
